// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package agntcy.dir.store.v1;

message ObjectRef {
  // Digest of the object being referenced.
  string cid = 1;
}

// Describes an object stored in the system.
// Follows the OCI Descriptor specification.
// https://github.com/opencontainers/image-spec/blob/main/descriptor.md
message ObjectMeta {
  // Digest of the object.
  string cid = 1;

  // Media type of the object.
  string media_type = 2;

  // Artifact type of the object.
  string artifact_type = 3;

  // Size of the object in bytes.
  int64 size = 4;

  // Arbitrary metadata for the descriptor.
  map<string, string> annotations = 5;

  // Raw data of the object.
  bytes data = 6;

  // Type of the object.
  ObjectType object_type = 7;

  // Link type, if the object is a link.
  LinkType link_type = 8;
}

enum ObjectType {
  OBJECT_TYPE_UNSPECIFIED = 0;
  OBJECT_TYPE_BLOB = 1;
  OBJECT_TYPE_MANIFEST = 2;
  OBJECT_TYPE_INDEX = 3;
  OBJECT_TYPE_LINK = 4;
}

enum LinkType {
  LINK_TYPE_UNSPECIFIED = 0;
  LINK_TYPE_CONFIG = 1;
  LINK_TYPE_SUBJECT = 2;
  LINK_TYPE_LAYER = 4;
}
